--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="conteudo">
       <div id="reviva">
         <h1 id="epico">REVIVA O ÉPICO</h1>
-        <h2 id="dezembro">DE 01 A 04 DE DEZEMBRO</h2>
+        <h2 id="dezembro">DE 01 A 04 DE DEZEMBRO DE 2025</h2>
         <h3>
           Você consegue sentir? É aquela sensação de <br />
           finalmente poder falar em voz alta: "estamos <br />
